--- a/CVseba.html
+++ b/CVseba.html
@@ -23,7 +23,11 @@
             <li>Universo Marvel(menos Antman).</li>
         </ul>
 
-        <h3>Perfil</h3>
-        
+        <div>
+            <h3>Perfil</h3>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+        </div>
     </body>
 </html>
