--- a/CVseba.html
+++ b/CVseba.html
@@ -25,7 +25,7 @@
 
         <div>
             <h3>Perfil</h3>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+            <p>Estudiante de la carrera Ingenieria en Sistemas en la UTN.</p>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
         </div>
