ordenar y terminar CV

--- a/CVseba.html
+++ b/CVseba.html
@@ -25,9 +25,27 @@
 
         <div>
             <h3>Perfil</h3>
-            <p>Estudiante de la carrera Ingenieria en Sistemas en la UTN.</p>
+            <p>Estudiante de la carrera Ingenieria en Sistemas de Informacion en la UTN.</p>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
         </div>
+
+        <h3>Iniciar Sesíon:</h3>
+        <p>
+            <form action="" method="">
+                <p>
+                    <label for="nom">Usuario</label>
+                    <input type="text" placeholder="Usuario">
+                </p>
+                <p>
+                    <label for="nom">Contraseña</label>
+                    <input type="password" placeholder="Contraseña">
+                </p>
+                <p>
+                    <input type="submit" value="Enviar">
+                    <input type="reset" value="Borrar">
+                </p>
+            </form>
+        </p>
     </body>
 </html>
