Editar Cv, agregar Css

--- a/CVseba.html
+++ b/CVseba.html
@@ -1,51 +1,56 @@
 <html>
-    <head>
-        <meta charset="utf-8">
-        <title>Mi CV Online</title>
-    </head>
 
-    <body>
-        <h1> Sebastian Ariel Gonzalez</h1>   
-        <img src="dipper.jpg" alt="Foto de Dipper">
-        <p> Edad: 22 años.</p>
-        
+<head>
+    <meta charset="utf-8">
+    <title>Mi CV Online</title>
+    <link rel="stylesheet" href="estilos.css">
+</head>
+
+<body>
+    <h1> Sebastian Ariel Gonzalez</h1>
+    <h4><img src="dipper.jpg" alt="Foto de Dipper"></h4>
+    <p id="edad"> Edad: 22 años.</p>
+
+    <div>
         <h3>Series Favoritas:</h3>
         <ul>
             <li>The Walking Dead.</li>
             <li>Vikingos.</li>
             <li>Breaking Bad.</li>
         </ul>
+    </div>
 
+    <div>
         <h3>Peliculas Favoritas:</h3>
         <ul>
             <li>El viaje de Chihiro.</li>
             <li>Atlantis</li>
             <li>Universo Marvel(menos Antman).</li>
         </ul>
+    </div>
 
-        <div>
-            <h3>Perfil</h3>
-            <p>Estudiante de la carrera Ingenieria en Sistemas de Informacion en la UTN.</p>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
-        </div>
+    <h3>Perfil</h3>
+    <p>Estudiante de la carrera Ingenieria en Sistemas de Informacion en la UTN.</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
 
-        <h3>Iniciar Sesíon:</h3>
+    <h3>Iniciar Sesíon:</h3>
+    <p>
+    <form action="" method="">
         <p>
-            <form action="" method="">
-                <p>
-                    <label for="nom">Usuario</label>
-                    <input type="text" placeholder="Usuario">
-                </p>
-                <p>
-                    <label for="nom">Contraseña</label>
-                    <input type="password" placeholder="Contraseña">
-                </p>
-                <p>
-                    <input type="submit" value="Enviar">
-                    <input type="reset" value="Borrar">
-                </p>
-            </form>
+            <label for="nom">Usuario</label>
+            <input type="text" placeholder="Usuario">
         </p>
-    </body>
+        <p>
+            <label for="nom">Contraseña</label>
+            <input type="password" placeholder="Contraseña">
+        </p>
+        <p>
+            <input type="submit" value="Enviar">
+            <input type="reset" value="Borrar">
+        </p>
+    </form>
+    </p>
+</body>
+
 </html>
