modificar CV y estilos

--- a/CVseba.html
+++ b/CVseba.html
@@ -8,8 +8,8 @@
 
 <body>
     <h1> Sebastian Ariel Gonzalez</h1>
-    <h4><img src="dipper.jpg" alt="Foto de Dipper"></h4>
-    <p id="edad"> Edad: 22 años.</p>
+    <h4><img src="dipper.jpg" alt="Foto de Dipper" class="foto"></h4>
+    <h2> Edad: 22 años.</h2>
 
     <div>
         <h3>Series Favoritas:</h3>
@@ -30,9 +30,9 @@
     </div>
 
     <h3>Perfil</h3>
-    <p>Estudiante de la carrera Ingenieria en Sistemas de Informacion en la UTN.</p>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+    <p class="texto">Estudiante de la carrera Ingenieria en Sistemas de Informacion en la UTN.</p>
+    <p class="texto">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+    <p class="texto">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
 
     <h3>Iniciar Sesíon:</h3>
     <p>
